--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "id": "7c9ef9fb",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 93,
    "id": "1e192283",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "id": "691f018c",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "id": "2ca1b283",
    "metadata": {},
    "outputs": [
@@ -115,9 +115,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zw/1gc129y571q7sj_fw05km6840000gn/T/ipykernel_66825/4225932905.py:21: Pandas4Warning: For backward compatibility, 'str' dtypes are included by select_dtypes when 'object' dtype is specified. This behavior is deprecated and will be removed in a future version. Explicitly pass 'str' to `include` to select them, or to `exclude` to remove them and silence this warning.\n",
+      "/var/folders/zw/1gc129y571q7sj_fw05km6840000gn/T/ipykernel_66825/4249488250.py:20: Pandas4Warning: For backward compatibility, 'str' dtypes are included by select_dtypes when 'object' dtype is specified. This behavior is deprecated and will be removed in a future version. Explicitly pass 'str' to `include` to select them, or to `exclude` to remove them and silence this warning.\n",
       "See https://pandas.pydata.org/docs/user_guide/migration-3-strings.html#string-migration-select-dtypes for details on how to write code that works with pandas 2 and 3.\n",
-      "  cat_features = X_train.select_dtypes(include=[\"object\", \"category\"]).columns\n"
+      "  cat_features = X_train.select_dtypes(include=[\"object\", \"category\"]).columns.to_list()\n"
      ]
     }
    ],
@@ -127,12 +127,11 @@
     "# Predicting math_score without reading_score and writing_score\n",
     "# otherwise these features will dominate the prediction due to high correlation with math_score\n",
     "\n",
-    "DROP_COLS = [\"reading_score\", \"writing_score\"] \n",
+    "drop_cols = [\"reading_score\", \"writing_score\"] \n",
+    "cols_to_drop = [c for c in drop_cols if c in df.columns]\n",
     "\n",
-    "df_b = df.drop(columns=DROP_COLS)\n",
-    "\n",
-    "X = df_b.drop(columns=[TARGET])\n",
-    "y = df_b[TARGET]\n",
+    "X = df.drop(columns=cols_to_drop + [TARGET])\n",
+    "y = df[TARGET]\n",
     "\n",
     "print(X.columns.tolist())\n",
     "print(X.shape, y.shape)\n",
@@ -141,24 +140,24 @@
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape\n",
     "\n",
     "# Create Column Transformer with 3 types of transformers\n",
-    "num_features = X_train.select_dtypes(exclude=[\"object\", \"category\"]).columns\n",
-    "cat_features = X_train.select_dtypes(include=[\"object\", \"category\"]).columns\n",
-    "\n",
-    "numeric_pipe = Pipeline(steps=[\n",
-    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-    "    (\"scaler\", StandardScaler()),\n",
-    "])\n",
+    "num_features = X_train.select_dtypes(exclude=[\"object\", \"category\"]).columns.to_list()\n",
+    "cat_features = X_train.select_dtypes(include=[\"object\", \"category\"]).columns.to_list()\n",
     "\n",
     "categorical_pipe = Pipeline(steps=[\n",
     "    (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
     "    (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\")),\n",
     "])\n",
+    "transformers = [(\"categorical\", categorical_pipe, cat_features)]\n",
+    "\n",
+    "if len(num_features) > 0:\n",
+    "    num_pipeline = Pipeline(steps=[\n",
+    "        (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "        (\"scaler\", StandardScaler()),\n",
+    "    ])\n",
+    "    transformers.append((\"numeric\", num_pipeline, num_features))\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        (\"categorical\", categorical_pipe, cat_features),\n",
-    "         (\"numeric\", numeric_pipe, num_features),        \n",
-    "    ]\n",
+    "    transformers=transformers\n",
     ")\n",
     "# X = preprocessor.fit_transform(X)\n",
     "# print(X.shape)\n"
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "id": "fd7c8fb0",
    "metadata": {},
    "outputs": [],
